# NovelStudio

./: .env.compose.example  .gitignore  AGENTS.md  Makefile  docker-compose.yml
novel_studio/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml
novel_studio/novel_app/: __init__.py  auth.py  config.py  db.py  db_models.py  graph_main.py  routers.py  schemas.py  state.py
novel_studio/novel_app/admin_static/: admin.css  admin.js  index.html
novel_studio/novel_app/api/: __init__.py  app.py  schemas.py
novel_studio/novel_app/nodes/: __init__.py  arc_planner.py  canon_manager.py  chapter_planner.py  chief_editor.py  feedback.py  human_gate.py  interviewer.py  lore_builder.py  release.py  reviewers.py  writer.py
novel_studio/novel_app/prompts/: arc_planner.md  canon_manager.md  chapter_planner.md  character_card_autofill.md  chief_editor.md  continuity_reviewer.md  interviewer.md  lore_builder.md  pacing_reviewer.md  patch_writer.md  reader_simulator.md  style_reviewer.md  writer.md
novel_studio/novel_app/services/: __init__.py  sql_store.py  store.py  workflow.py
novel_studio/scripts/: check_env.py  init_db.py  render_markdown_pdf.py  smoke_run.py
novel_studio/tests/: test_api.py  test_auth_and_audit.py  test_canon_manager.py  test_chapter_planner.py  test_chief_editor.py  test_config.py  test_feedback.py  test_human_gate.py  test_integration_graph.py  test_llm.py  test_release.py  test_reviewers.py  test_routers.py  test_schemas.py  test_sql_store.py  test_workflow.py  test_writer_nodes.py
ops/: common.sh  (+7 more)
(+53 files in other folders)
