[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-studio"
version = "0.1.0"
description = "LangGraph scaffold for a serialized fiction editorial workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=1.0.0",
  "langchain>=1.0.0",
  "langchain-openai>=0.3.0",
  "openai>=2.30.0",
  "pydantic>=2.7.0",
  "psycopg[binary]>=3.1.0",
  "sqlalchemy>=2.0.0",
  "typing-extensions>=4.10.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools.packages.find]
include = ["novel_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
